--- a/home/dotfiles/hypr/hyprpaper.conf
+++ b/home/dotfiles/hypr/hyprpaper.conf
@@ -1,10 +1,10 @@
 # Preload Wallpaper
-preload = ~/.config/hypr/Space.png
+preload = ~/.config/hypr/Space.jpg
 
 
 # Set wallpaper
-wallpaper = DP-5, ~/.config/hypr/Space.png
-wallpaper = DP-4, ~/.config/hypr/Space.png
+wallpaper = DP-5, ~/.config/hypr/Space.jpg
+wallpaper = DP-4, ~/.config/hypr/Space.jpg
 
 # Stretch Across Both Monitors
 
