--- a/home/dotfiles/hypr/waybar/config
+++ b/home/dotfiles/hypr/waybar/config
@@ -1,142 +1,90 @@
 {
-	"layer": "top",
-	"modules-left": ["backlight", "pulseaudio", "tray", "wlr/taskbar"],
-	"modules-center": ["hyprland/workspaces"],
-	"modules-right": ["custom/launcher", "battery", "clock", "custom/notification"],
-	
-  "pulseaudio": {
-      "format": "{icon} {volume}% {format_source}",
-      "format-bluetooth": " {icon} {volume}% {format_source}",
-      "format-bluetooth-muted": "  {icon} {format_source}",
-      "format-muted": "  {format_source}",
-      "format-source": " {volume}%",
-      "format-source-muted": "",
-      "format-icons": {
-          "default": [
-              "",
-              "",
-              ""
-          ]
-      },
-      "on-click": "pavucontrol"
-  },
+  "layer": "top",
+  "position": "bottom",
+  "height": 30,
+  "modules-left": ["wlr/workspaces", "window"],
+  "modules-center": ["mpd", "playerctl", "weather"],
+  "modules-right": ["cpu", "memory", "volume", "clock", "tray"],
 
-  "bluetooth": {
-    "on-click": "blueman-manager",
-  },
-
-  "network": {
-      "format-wifi": " {essid} ({signalStrength}%)",
-      "format-ethernet": " {ifname}",
-      "interval": 3,
-      "format-linked": "{ifname} (No IP) ",
-      "format": "",
-      "format-disconnected": "",
-      "tooltip-format": " {bandwidthUpBits}  {bandwidthDownBits}\n{ifname}\n{ipaddr}/{cidr}\n",
-      "tooltip-format-wifi": " {essid} {frequency}MHz\nStrength: {signaldBm}dBm ({signalStrength}%)\nIP: {ipaddr}/{cidr}\n {bandwidthUpBits}  {bandwidthDownBits}",
-      "min-length": 17,
-      "max-length": 17,
-  },
-
-	"backlight": {
-		"tooltip": false,
-		"format": " {}%",
-		"interval":1,
-        "on-scroll-up": "light -A 5",
-		"on-scroll-down": "light -U 5"
-	},
-
-  "battery": {
-      "states": {
-          "full": 100,
-          "good": 95,
-          "decent": 50,
-          "warning": 30,
-          "critical": 20
-      },
-      "format": "{icon}  {capacity}%",
-      "format-time": "{H} h {M} min",
-      "format-alt": "{icon} {time}",
-      "format-icons": ["", "", "", "", ""]
-  },
-
-  "clock": {
-      "format": "{:%H:%M}",
-      "format-alt": "{:%m-%d-%Y}"
-  },
-
-  "custom/launcher":{
-      "format": "",
-      "on-click": "kitty",
-      "on-click-right": "killall kitty"
-  },
-
-  "hyprland/workspaces": {
-    "format": "{icon}",
+  "wlr/workspaces": {
+    "format": "{name}",
     "on-click": "activate",
-    "format-icons": {
-      "1": "I",
-      "2": "II",
-      "3": "III",
-      "4": "IV",
-      "5": "V",
-      "6": "VI",
-      "7": "VII",
-      "8": "VIII",
-      "9": "IX",
-      "10": "X",
-    },
-    "active": "",
     "sort-by-number": true,
-    "all-outputs": true,
-    "active-only": false,
-    "persistent-workspaces": true, 
-      
-  },
-
-  "custom/power": {
-     "format": "⏻",
-     "on-click": "wlogout",
-     "tooltip": false
-  },
-
-  "wlr/taskbar": {
-    "format": "{icon}",
-    "icon-size": 14,
-    "icon-theme": "Gruvbox Plus Dark",
-    "tooltip-format": "{title}",
-    "on-click": "activate",
-    "on-click-middle": "close",
-    "ignore-list": [
-        "Alacritty",
-        "kitty"
-    ],
-    "app_ids-mapping": {
-      "firefoxdeveloperedition": "firefox-developer-edition"
-    },
-    "rewrite": {
-      "Firefox Web Browser": "Firefox",
-      "Foot Server": "Terminal"
+    "disable-scroll": false,
+    "format-icons": {
+      "default": "",
+      "focused": "",
+      "urgent": ""
     }
   },
 
-  "custom/notification": {
-    "tooltip": false,
-    "format": "{icon}",
-    "format-icons": {
-      "notification": " <span foreground='red'><sup></sup></span>",
-      "none": " ",
-      "dnd-notification": "<span foreground='red'><sup></sup></span>",
-      "dnd-none": " ",
-      "inhibited-notification": "<span foreground='red'><sup></sup></span>",
-      "inhibited-none": " ",
-      "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
-      "dnd-inhibited-none": " "
-    },
-    "return-type": "json",
-    "exec-if": "which swaync-client",
-    "exec": "swaync-client -swb",
-    "on-click-right": "sleep 0.1 && swaync-client -d -sw",
-    "escape": true
+  "window": {
+    "max-length": 50
   },
+
+  "mpd": {
+    "format": "{stateIcon} {artist} - {title}",
+    "state-icons": {
+      "playing": "",
+      "paused": "",
+      "stopped": ""
+    },
+    "interval": 5
+  },
+
+  "playerctl": {
+    "player": "spotify,firefox,chromium",
+    "format": "{status_icon} {artist} - {title}",
+    "status-icons": {
+      "Playing": "",
+      "Paused": "",
+      "Stopped": ""
+    },
+    "on-click": "playerctl play-pause",
+    "on-scroll-up": "playerctl next",
+    "on-scroll-down": "playerctl previous"
+  },
+
+  "weather": {
+    "format": "🌡️ {city}: {temperature}°C {icon}",
+    "interval": 600,
+    "unit": "metric",
+    "openweathermap-api-key": "0ff83815dc926d7d6cbab0013377589e",
+    "openweathermap-city-id": "4407066",
+    "icons": {
+      "01d": "☀️", "01n": "🌙",
+      "02d": "🌤️", "02n": "☁️",
+      "03d": "☁️",  "03n": "☁️",
+      "04d": "☁️",  "04n": "☁️",
+      "09d": "🌧️", "09n": "🌧️",
+      "10d": "🌦️", "10n": "🌧️",
+      "11d": "⛈️", "11n": "⛈️",
+      "13d": "❄️", "13n": "❄️",
+      "50d": "🌫️", "50n": "🌫️"
+    }
+  },
+
+  "cpu": {
+    "format": "CPU: {usage}%",
+    "interval": 5
+  },
+
+  "memory": {
+    "format": "RAM: {used} / {total} GiB",
+    "interval": 5
+  },
+
+  "volume": {
+    "format": "Vol: {volume}%"
+  },
+
+  "clock": {
+    "format": "{:%H:%M}",
+    "interval": 60
+  },
+
+  "tray": {
+    "icon-size": 16,
+    "spacing": 10
+  }
 }
