--- a/home/dotfiles/hypr/hyprland.conf
+++ b/home/dotfiles/hypr/hyprland.conf
@@ -262,5 +262,16 @@ bind = $mainMod, L, exec, hyprctl setcursorpos $(hyprctl clients active | grep "
 
 # windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+workspace = 1, monitor:DP-4
+workspace = 2, monitor:DP-5
+workspace = 3, monitor:DP-4
+workspace = 4, monitor:DP-5
+workspace = 5, monitor:DP-4
+workspace = 6, monitor:DP-5
+workspace = 7, monitor:DP-4
+workspace = 8, monitor:DP-5
+workspace = 9, monitor:DP-4
+workspace = 0, monitor:DP-5
+
 # Gamescope Windows Float
 windowrulev2 = float, class:^(gamescope)$
