--- a/home/dotfiles/hypr/hypridle.conf
+++ b/home/dotfiles/hypr/hypridle.conf
@@ -1,7 +1,7 @@
 general {
     lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
     before_sleep_cmd = loginctl lock-session    # lock before suspend.
-    after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
+    after_sleep_cmd = hyprctl reload && hyprctl dispatch dpms off && sleep 1 && hyprctl dispatch dpms on
 }
 
 listener {
@@ -10,7 +10,7 @@ listener {
     on-resume = brightnessctl -r                 # monitor backlight restore.
 }
 
-# turn off keyboard backlight, comment out this section if you dont have a keyboard backlight.
+# turn off keyboard backlight, comment out this section if you don't have a keyboard backlight.
 listener { 
     timeout = 150                                          # 2.5min.
     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
@@ -32,3 +32,10 @@ listener {
     timeout = 1800                                # 30min
     on-timeout = systemctl suspend                # suspend pc
 }
+
+# New addition: force reload and DPMS cycle after waking from suspend
+listener {
+    on = resume
+    exec = hyprctl reload && hyprctl dispatch dpms off && sleep 1 && hyprctl dispatch dpms on
+}
+
