--- a/home/dotfiles/hypr/hyprland.conf
+++ b/home/dotfiles/hypr/hyprland.conf
@@ -194,6 +194,7 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+bind = $mainMod, L, exec, hyprlock
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -244,9 +245,7 @@ bind = , XF86AudioPrev, exec, playerctl previous
 # Screenshots
 bind = , print, exec, grim -g "$(slurp)" $HOME/Pictures/Screenshots/$(date +'%s_grim.png')
 
-# Special
-# bind = Super+Shift+M, exec, ~/.config/hypr/scripts/modswitch.sh
-bind = $mainMod, L, exec, hyprctl setcursorpos $(hyprctl clients active | grep "monitor:" | cut -d" " -f4)
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
