Ashell status bar

--- a/home/dotfiles/hypr/hyprland.conf
+++ b/home/dotfiles/hypr/hyprland.conf
@@ -41,7 +41,7 @@ $menu = rofi -show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper 
+exec-once = ashell & hyprpaper 
 exec-once = numlockx on
 
 # Start Hypridle
@@ -187,7 +187,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, Q, exec, firefox
-bind = $mainMod SHIFT, S, exec, waybar
+bind = $mainMod SHIFT, S, exec, ashell
 bind = $mainMod, F, fullscreen
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
