--- a/home/dotfiles/hypr/hyprland.conf
+++ b/home/dotfiles/hypr/hyprland.conf
@@ -187,7 +187,8 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, Q, exec, firefox
-bind = $mainMod SHIFT, S, exec, ashell
+bind = $mainMod SHIFT, A, exec, ashell
+bind = $mainMod SHIFT, D, exec, pkill ashell 
 bind = $mainMod, F, fullscreen
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
