--- a/home/dotfiles/hypr/ashell.toml
+++ b/home/dotfiles/hypr/ashell.toml
@@ -39,13 +39,13 @@ truncate_title_after_length = 150
 # optional, the following is the default configuration
 [modules]
 # The modules that will be displayed on the left side of the status bar
-left = [ "workspaces", "tray" ]
+left = [ "Workspaces", "Tray" ]
 # The modules that will be displayed in the center of the status bar
-center = [ "mediaPlayer" ]
+center = [ "MediaPlayer" ]
 # The modules that will be displayed on the right side of the status bar
 # The nested modules array will form a group sharing the same element in the status bar
 # You can also use custom modules to extend the normal set of options, see configuration below
-right = [ "systemInfo", [ "clock", "privacy", "settings" ], "customNotifications" ]
+right = [ "SystemInfo", [ "Clock", "Privacy", "Settings" ], "CustomNotifications" ]
 
 # Update module configuration.
 # Without a value the related button will not appear.
@@ -148,22 +148,22 @@ format = "%a %d %b %R"
 max_title_length = 100
 show_only_default = true
 # Custom modules configuration (you can have multiple)
-#[[CustomModule]]
+[[CustomModule]]
 ## The name will link the module in your left/center/right definition
-#name = "CustomNotifications"
+name = "CustomNotifications"
 ## The default icon for this custom module
-#icon = ""
+icon = ""
 ## The command that will be executed on click
-#command = "swaync-client -t -sw"
+command = "swaync-client -t -sw"
 ## You can optionally configure your custom module to update the UI using another command
 ## The output right now follows the waybar json-style output, using the `alt` and `text` field
 ## E.g. `{"text": "3", "alt": "notification"}`
-#listen_cmd = "swaync-client -swb"
+listen_cmd = "swaync-client -swb"
 ## You can define behavior for the `text` and `alt` fields
 ## Any number of regex can be used to change the icon based on the alt field
-#icons.'dnd.*' = ""
+icons.'dnd.*' = ""
 ## Another regex can optionally show a red "alert" dot on the icon
-#alert = ".*notification"
+alert = ".*notification"
 
 # Settings module configuration
 [settings]
