--- a/home/dotfiles/niri/swaylock.conf
+++ b/home/dotfiles/niri/swaylock.conf
@@ -1,5 +1,5 @@
 # ~/.config/swaylock/config
-image=/home/apollo/.config/niri/cold.jpg
+image=/home/apollo/.config/wallpapers/niri.jpg
 # You can add other options here if you want, e.g.:
 # font=sans-serif
 # font-size=24
