Gruvbox rice completish

--- a/home/dotfiles/niri/swaylock.conf
+++ b/home/dotfiles/niri/swaylock.conf
@@ -6,3 +6,14 @@ image=/home/apollo/.config/wallpapers/niri.jpg
 # indicator-idle-visible
 # color=00000088 # Semi-transparent black overlay
 
+# Indicator Ring and Interior Colors (Gruvbox Dark)
+ring-color=d79921
+inside-color=282828
+
+# Verifying/Correct Password State
+ring-ver-color=98971a
+inside-ver-color=282828
+
+# Wrong Password State
+ring-wrong-color=cc241d
+inside-wrong-color=cc241d
